# resume-scorer

./: .replit  Pasted-KeyError-KeyError-technical-skills-Traceback-most-recent-call-last-File-home-runner-resu-1734167439659.txt  README.md  app.py  criteria.py  environment.yml  main.py  models.py  pyproject.toml  scoring_api.py
instance/: resumes.db
static/js/: criteria_editor.js  rankings.js  scoring.js
templates/: index.html  ranked_results.html  scoring_result.html
tf2/: app.py  main.py
tf2/api/: criteria.py  resumes.py  scorers.py
tf2/assets/criteria/: standard.json  數據科學家評估標準.json
tf2/components/: criteria_manager.py  resume_manager.py  resume_scorer.py
tf2/db/: schemas.py
tf2/frontend/: index.html  package-lock.json  package.json  vite.config.js
tf2/frontend/services/: api.js
tf2/frontend/src/: App.vue
tf2/frontend/src/components/: CriteriaManagement.vue  CriteriaTree.vue  ResumeScoring.vue  ScoreDisplay.vue
tf2/frontend/src/services/: criteriaService.js  resumeService.js
tf2/frontend/src/store/: criteria.js  resume.js
tf2/frontend/src/styles/: main.css  variables.css
tf2/static/: index.html
